--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@astrojs/tailwind": "^5.1.0",
     "@fontsource-variable/onest": "^5.0.3",
     "@fontsource/lobster": "^5.0.19",
+    "@googlemaps/js-api-loader": "^1.16.6",
     "astro": "^4.4.9",
+    "mapkick": "^0.2.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
