--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@googlemaps/js-api-loader": "^1.16.6",
     "astro": "^4.4.9",
     "mapkick": "^0.2.6",
+    "swiper": "^11.0.7",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
